Revision history for Text-ANSITable

0.07    2013-05-03 (SHARYANTO) (not yet released)

        - Add more FAQ items.


0.06    2013-05-03 (SHARYANTO)

        This release is a reorganization/tidying up of the API. Lots of
        renaming, sorry.

        [INCOMPATIBLE CHANGES]

        - Rename attributes 'column_{width,align,pad,lpad,rpad}' -> 'cell_*'.

        - Rename attributes 'row_{valign,vpad,tpad,bpad,height}' -> 'cell_*'.

        - {column,row,cell}_style() now split to
          {get,set}_{column,row,cell}_style() to make them stand out/different
          from table-level {column,row,cell}_* attributes. The set methods now
          can set multiple styles and check for known styles, but they no longer
          return old value.

        - cell() also split to get_cell() and set_cell() (to be more consistent
          with the above).

        [ENHANCEMENTS]

        - Add per-row/per-cell styles: align, valign.

        - Add more FAQ items.

        [BUG FIXES]

        - Setting column_align/column_valign didn't work.

        - Setting colors with ANSI escape codes didn't work.

        - Proof-read and update POD.


0.05    2013-05-02 (SHARYANTO)

        No functional changes. Fix bug which breaks Data::Format::Pretty when
        switching from Text::ASCIITable.


0.04    2013-05-02 (SHARYANTO)

        Make the default color theme more readable on terminal emulators with
        white background.


0.03    2013-05-02 (SHARYANTO)

        - Add attributes: column_width, row_height.

        - Add color theme: default_gradation_whitebg.

        - Improve column type detection: date (/[acmsu]time/), percentage (/%/).

        - Fixes to POD.


0.02    2013-05-01 (SHARYANTO)

        [ENHANCEMENTS]

        - Detect bool/num/str column types. Apply some pretty formatting for
          those.


0.01    2013-05-01 (SHARYANTO)

        First "real" release (substantial features implemented). Some border