@@ -18,12 +18,12 @@ if ($ARGV[0]) {
 
 my $all_bs = $t->list_border_styles(1);
 
-$t->columns(['Name', 'Module', 'Summary', 'box_chars?', 'utf8?']);
+$t->columns(['Name', 'Summary', 'box_chars?', 'utf8?']);
 my $utf8; # we sort by not utf8 and then utf8, just to demonstrate add_row_separator
 for my $name (sort {($all_bs->{$a}{utf8} ? 1:0)<=>($all_bs->{$b}{utf8} ? 1:0) || $a cmp $b} keys %$all_bs) {
     my $bs = $all_bs->{$name};
     $t->add_row(
-        [$name, $bs->{module}, $bs->{summary}, $bs->{box_chars} ? 1:0, $bs->{utf8} ? 1:0],
+        [$name, $bs->{summary}, $bs->{box_chars} ? 1:0, $bs->{utf8} ? 1:0],
         {fgcolor=>$name eq $t->border_style->{name} ? "aaaa00" : undef});
 
     if (!$utf8 && $bs->{utf8}) {
